# test-runes

./: .gitignore  README.md  Runefile.yml  test-runes.rune
.github/workflow/: main.yml
.github/workflows/: main.yml
audio/microspeech-tfjs/: Runefile.yml  microspeech-tfjs.rune  model.json
audio/multispeech/: Runefile.yml
audio/spice/: Runefile  Runefile.yml
audio/yamnet/: Runefile  Runefile.yml
audio/yamnet/audio_float_conversion/: Cargo.toml
audio/yamnet/audio_float_conversion/src/: lib.rs
audio/yamnet/yamnet-tfjs/: Runefile.yml
bird-classification/: Runefile
bird_classification/: Runefile  bird_classification.rune  birds.rune
bird_classification/assets/: testlabel
food/: Runefile
food/assets/: aiy_food_V1_labelmap.csv
image/bird_classification/: Runefile  Runefile.yml  bird_classification.rune
image/blazeface/: Runefile.yml
image/body_pix/: Runefile.yml  bodyPix.tflite  body_pix.rune
image/cartoongan/: Runefile.yml  cartoongan.rune
image/cartoongan/cartoongan-tfjs/: Runefile_cartoon.yml  cartoongan-tfjs.rune
image/craft-text-detector/: Runefile.yml
image/deep_labv3/: Runefile.yml  deep_labv3.rune
image/deep_labv3/deep_lab-tfjs/: Runefile.yml  deep_lab-tfjs.rune
image/deep_labv3/mobile_object_localizer_v1/: Runefile.yml
image/deeplab-cityscapes/: Runefile.yml  cityscapes.txt
image/deeplab-cityscapes/deeplab-cityscapes-tfjs/: Runefile.yml  deeplab-cityscapes-tfjs.rune
image/diet/: Runefile.yml
image/east-text-detector/: Runefile.yml
image/efficientdet_lite4_detection/: Runefile.yml
image/efficientdet_lite4_detection/label/: Cargo.toml
image/efficientdet_lite4_detection/label/src/: lib.rs
image/efficientdet_lite4_detection/zero_indexing/: Cargo.toml
image/efficientdet_lite4_detection/zero_indexing/src/: lib.rs
image/efficientnet/: Runefile.yml
image/esrgan/: Runefile.yml
image/food/: Runefile  Runefile.yml  aiy_food_V1_labelmap.csv
image/food/assets/: aiy_food_V1_labelmap.csv
image/gesture_recognition/: Runefile.yml
image/gesture_recognition/gesture-up-down-left-right/: model.json
image/gesture_recognition/gesture_recognition_tfjs/: Runefile.yml
image/gesture_recognition/model/: model.json
image/hard-hat/: Runefile.yml
image/inception/: Runefile  Runefile.yml
image/inception_v1/: Runefile.yml  labelmap.csv
image/inception_v1/inception-tfjs/: Runefile.yml
image/landmark_na/: Runefile  Runefile.yml  landmarks_classifier_north_america_V1_label_map.csv
image/landmark_na/assets/: 1 line.txt  formatted-label-.txt  formatted-label-yml.txt
image/mask-detection/: Runefile.yml  mask-detection.rune  mask-detection.tflite  quant-int-mask-detection.tflite
image/midas/: Runefile.yml
image/mirnet/: Runefile.yml
image/mobileNet_for_image_segmentation/: Runefile.yml  mobileNet.rune  mobilenetv2-dm05-coco_int8_1.tflite
image/mobileViT/: Runefile.yml  mobileViT.rune  mobilevit_xxs.tflite
image/mobile_object_localizer_v1/: mobile_object_localizer_v1.rune
image/mobilenet/: Runefile.yml  mobilenet.rune
image/mobilenet/mobilenet-tfjs/: Runefile.yml
image/mobilenet_non_quantized/: Runefile  Runefile.yml
image/mobilenet_non_quantized/assets/: label.txt
image/movenet_pose_estimation/: Runefile.yml
image/mushroom/: Runefile.yml
image/mushroom/assets/: fungiv2_labelmap.csv
image/person-gesture/: Runefile.yml
image/person-gesture/control_logic/src/: lib.rs
image/person-micro/: Runefile.yml  person-micro.rune
image/person_detection/: Runefile.yml  app.rune  person_detection.rune
image/plant/: Runefile.yml  aiy_plants_V1_labelmap.csv
image/plant/assets/: label.txt
image/plant_disease/: Runefile.yml
image/posenet/: Runefile.yml
image/ssd/ssd-tfjs/: Runefile.yml
image/style_transfer/: Runefile.yml  app.rune  style_transfer.rune
image/style_transfer/style_transfer-tfjs/: Runefile.yml
image/yolo_v5/: Runefile.yml
image/yolo_v5/object_filter/: Cargo.toml
image/yolo_v5/object_filter/src/: lib.rs
inception/: Runefile
landmark_na/: Runefile
landmark_na/assets/: landmarks_classifier_north_america_V1_label_map.csv
miscellaneous/make_face/: Runefile.yml
miscellaneous/recommendation/: Runefile.yml  input.txt  movies.txt  recommendation.rune
mobilenet/: Runefile  mobilenet.rune
mobilenet_non_quantized/: Runefile
multispeech/: Runefile  multispeech.rune
mushroom/: Runefile
nlp/: README.md
nlp/albert/: Runefile.yml  input1.txt  input2.txt
nlp/albert_lite_base_1/: README.md
nlp/bert/: Cargo.toml  Mobilebert_Question_Answer_Model_Maker.ipynb  Runefile.yml  input1.txt  input2.txt
nlp/bert/argmax/: Cargo.toml
nlp/bert/argmax/src/: lib.rs
nlp/bert/bert-tfjs/: Runefile.yml
nlp/bert/softmax/: Cargo.toml
nlp/bert/softmax/src/: lib.rs
nlp/bert/text_extractor/: Cargo.toml
nlp/bert/text_extractor/src/: lib.rs
nlp/bert/tokenizers/: Cargo.toml
nlp/bert/tokenizers/examples/: tokenize.rs
nlp/bert/tokenizers/src/: lib.rs
nlp/bert/tokenizers/src/tokenizer/: base_tokenizer.rs  bert_tokenizer.rs  constants.rs  mod.rs  tokenization_utils.rs
nlp/bert/tokenizers/src/vocab/: base_vocab.rs  bert_vocab.rs  mod.rs
plant/: Runefile
plant_disease/: Runefile
util/: Dockerfile  build.sh  rune.sh  test_audio.sh  test_image.sh
yamnet/: Runefile
