[package]
name = 'bert'
edition = '2018'
version = '0.0.0'
authors = []
keywords = []
categories = []
autobins = false
autoexamples = false
autotests = false
autobenches = false
publish = false
resolver = '2'

[workspace]
members = ['.']
default-members = ['.']
[dependencies.argmax]
path = '/Users/mohit/hotg/test-runes/nlp/bert/./argmax'
features = []
optional = false

[dependencies.hotg-rune-core]
git = 'https://github.com/hotg-ai/rune'
tag = 'nightly'
features = []
optional = false

[dependencies.hotg-rune-proc-blocks]
git = 'https://github.com/hotg-ai/rune'
tag = 'nightly'
features = []
optional = false

[dependencies.hotg-runicos-base-wasm]
git = 'https://github.com/hotg-ai/rune'
tag = 'nightly'
features = []
optional = false

[dependencies.lazy_static]
version = '1.0'
features = ['spin_no_std']
optional = false

[dependencies.log]
version = '0.4'
features = [
    'max_level_debug',
    'release_max_level_info',
]
optional = false

[dependencies.text_extractor]
path = '/Users/mohit/hotg/test-runes/nlp/bert/./text_extractor'
features = []
optional = false

[dependencies.tokenizers]
path = '/Users/mohit/hotg/test-runes/nlp/bert/./tokenizers'
features = []
optional = false

[lib]
path = 'lib.rs'
test = true
doctest = true
bench = true
doc = true
plugin = false
proc-macro = false
harness = true
edition = '2018'
crate-type = ['cdylib']
required-features = []
