[package]
name = "audio_float_conversion"
version = "0.6.1-dev"
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.hotg-rune-core]
git = 'https://github.com/hotg-ai/rune'
rev = '0ffa7738c30c0a33b06d405c8301ae1905d7e2eb'
features = []
optional = false

[dependencies.hotg-rune-proc-blocks]
git = 'https://github.com/hotg-ai/rune'
rev = '0ffa7738c30c0a33b06d405c8301ae1905d7e2eb'
features = []
optional = false


[dev-dependencies]
pretty_assertions = "0.7.2"
