[package]
resolver = "2"
name = "label"
version = "0.7.1-dev"
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = {version = "0.2.14", default-features = false}
hotg-rune-proc-blocks = {git = "https://github.com/hotg-ai/rune", tag = "nightly" }
