[package]
resolver = "2"
name = "softmax"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hotg-rune-core = {git = "https://github.com/hotg-ai/rune", rev = "3b6e32cb02254a667b0898a579a1f1e8ea08232f" }
hotg-rune-proc-blocks = {git = "https://github.com/hotg-ai/rune", rev = "3b6e32cb02254a667b0898a579a1f1e8ea08232f" }
libm = {version = "0.2.1", default-features = false}
