[package]
resolver = "2"
name = "tokenizers"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
hotg-rune-core = {git = "https://github.com/hotg-ai/rune", rev = "3b6e32cb02254a667b0898a579a1f1e8ea08232f" }
hotg-rune-proc-blocks = {git = "https://github.com/hotg-ai/rune", rev = "3b6e32cb02254a667b0898a579a1f1e8ea08232f" }
anyhow = { version = "1.0", default-features = false }
unicode-normalization = {version = "0.1.19", default-features =false}
