[package]
resolver = "2"
name = "tokenizers"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
hotg-rune-core = {git = "https://github.com/hotg-ai/rune", rev = '5e72105f781c41459259134ce93510ce71107f25' }
hotg-rune-proc-blocks = {git = "https://github.com/hotg-ai/rune", rev ='5e72105f781c41459259134ce93510ce71107f25' }
anyhow = { version = "1.0", default-features = false }
unicode-normalization = {version = "0.1.19", default-features =false}
